// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard component renders an element if the image source is a component 1`] = `
<div>
  <div
    class="ProfileCard-root-45"
  >
    <div
      class="ProfileCard-head-46"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-47 MuiAvatar-colorDefault"
      >
        <h1>
          Something here
        </h1>
      </div>
    </div>
    <div
      class="ProfileCard-body-49"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-53 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
        <p
          class="MuiTypography-root ProfileCard-title-48 Typography-root-53 MuiTypography-body2"
          data-testid="typography"
        >
          Code Wizard
        </p>
      </div>
    </div>
    <div
      class="ProfileCard-footer-50"
    >
      <span
        class="ProfileCard-row-51"
      >
        <svg
          class="ProfileCard-rowIcon-52"
        />
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-61 Anchorlink MuiTypography-colorPrimary"
          href="/"
        >
          <span>
            Profile line with link
          </span>
        </a>
      </span>
      <span
        class="ProfileCard-row-51"
      >
        <svg
          class="ProfileCard-rowIcon-52"
        />
        Profile line without linkn
      </span>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly ProfileRow if icon not passed 1`] = `
<div>
  <div
    class="ProfileCard-root-83"
  >
    <div
      class="ProfileCard-head-84"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-85 MuiAvatar-colorDefault"
      >
        <h1>
          Something here
        </h1>
      </div>
    </div>
    <div
      class="ProfileCard-body-87"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-91 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
        <p
          class="MuiTypography-root ProfileCard-title-86 Typography-root-91 MuiTypography-body2"
          data-testid="typography"
        >
          Code Wizard
        </p>
      </div>
    </div>
    <div
      class="ProfileCard-footer-88"
    >
      <span
        class="ProfileCard-row-89"
      >
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-99 Anchorlink MuiTypography-colorPrimary"
          href="/"
        >
          <span>
            Profile line with link
          </span>
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly if ProfileCard.Body style passed 1`] = `
<div>
  <div
    class="ProfileCard-root-121"
  >
    <div
      class="ProfileCard-head-122"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-123 MuiAvatar-colorDefault"
      >
        <h1>
          Something here
        </h1>
      </div>
    </div>
    <div
      class="ProfileCard-body-125"
      style="color: red;"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-129 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly if ProfileCard.Body title passed 1`] = `
<div>
  <div
    class="ProfileCard-root-105"
  >
    <div
      class="ProfileCard-head-106"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-107 MuiAvatar-colorDefault"
      >
        <h1>
          Something here
        </h1>
      </div>
    </div>
    <div
      class="ProfileCard-body-109"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-113 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
        <p
          class="MuiTypography-root ProfileCard-title-108 Typography-root-113 MuiTypography-body2"
          data-testid="typography"
        >
          Code Wizard
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly if does not have children 1`] = `
<div>
  <div
    class="ProfileCard-root-67"
  >
    <div
      class="ProfileCard-head-68"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-69 MuiAvatar-colorDefault"
      >
        <h1>
          Something here
        </h1>
      </div>
    </div>
    <div
      class="ProfileCard-body-71"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-75 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly with an image 1`] = `
<div>
  <div
    class="ProfileCard-root-1 name"
  >
    <div
      class="ProfileCard-head-2"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-3"
      >
        <img
          class="MuiAvatar-img"
          src="path-to-image"
        />
      </div>
    </div>
    <div
      class="ProfileCard-body-5"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-9 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
        <p
          class="MuiTypography-root ProfileCard-title-4 Typography-root-9 MuiTypography-body2"
          data-testid="typography"
        >
          Code Wizard
        </p>
      </div>
    </div>
    <div
      class="ProfileCard-footer-6"
    >
      <span
        class="ProfileCard-row-7"
      >
        <svg
          class="ProfileCard-rowIcon-8"
        />
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-17 Anchorlink MuiTypography-colorPrimary"
          href="/"
        >
          <span>
            Profile line with link
          </span>
        </a>
      </span>
      <span
        class="ProfileCard-row-7"
      >
        <svg
          class="ProfileCard-rowIcon-8"
        />
        Profile line without linkn
      </span>
    </div>
  </div>
</div>
`;

exports[`ProfileCard component renders correctly without an image 1`] = `
<div>
  <div
    class="ProfileCard-root-23"
  >
    <div
      class="ProfileCard-head-24"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular ProfileCard-profilePicture-25 MuiAvatar-colorDefault"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiAvatar-fallback"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
    </div>
    <div
      class="ProfileCard-body-27"
    >
      <div>
        <strong
          class="MuiTypography-root Typography-root-31 MuiTypography-h5"
          data-testid="typography"
        >
          Richard Stallman
        </strong>
        <p
          class="MuiTypography-root ProfileCard-title-26 Typography-root-31 MuiTypography-body2"
          data-testid="typography"
        >
          Code Wizard
        </p>
      </div>
    </div>
    <div
      class="ProfileCard-footer-28"
    >
      <span
        class="ProfileCard-row-29"
      >
        <svg
          class="ProfileCard-rowIcon-30"
        />
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-39 Anchorlink MuiTypography-colorPrimary"
          href="/"
        >
          <span>
            Profile line with link
          </span>
        </a>
      </span>
      <span
        class="ProfileCard-row-29"
      >
        <svg
          class="ProfileCard-rowIcon-30"
        />
        Profile line without linkn
      </span>
    </div>
  </div>
</div>
`;
